# gestock

./: .env.exemple  .gitignore  LICENSE  README.md  REGRAS_COMMIT.md  package-lock.json  patch_notes.md  produtos.csv  run_chatbot.ps1
admin_module/: .gitignore  DEVELOPMENT.md  README.md  main.py  pyproject.toml
admin_module/models/: system_health.py
admin_module/src/admin_module/models/: hardware_monitor.py  logs_fetcher.py  system_health.py
admin_module/src/admin_module/pydantic/: logs_model.py
admin_module/src/admin_module/routers/: health_router.py  logs_router.py  status_router.py
admin_module/src/admin_module/services/: user_service.py
admin_module/src/admin_module/utils/: database.py
admin_module/utils/: database.py
auth_module/: DEVELOPMENT.md  README.md  main.py  pyproject.toml
auth_module/auth_module/models/: Recovery.py  User.py
auth_module/auth_module/routers/: recovery_router.py  user_router.py
auth_module/auth_module/templates/: recovery_template.yaml
auth_module/auth_module/utils/: database.py  env_loader.py  mail_service.py  security.py
backend/: .env  .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
backend/backend/: app.py  logger.py  logging_config.py  logging_middleware.py  main.py  test_connection.py  test_crud.py
backend/backend/database/: base.py  create_table.sql  db.py  mail_config.yaml  repository.py  schemas.py  script_evento.txt
backend/backend/models/: log_importacao.py  moviment_filters.py  product_filters.py  product_item.py  transaction_filters.py  transaction_schema.py
backend/backend/routers/: analytics_router.py  event_router.py  log_importacao_router.py  mail_router.py  movimentacao_router.py  notification_router.py  produto_router.py  system_router.py  upload.py  views_router.py
backend/backend/schemas/: __init__.py  log_importacao.py
backend/backend/services/: analytics_view.py  event_processor.py  event_service.py  expiration_event_service.py  file_service.py  import_service.py  log_importacao_service.py  mail_service.py  movimentacao_service.py  notification_normalizer.py  notification_service.py  parser_service.py  produto_service.py  stock_event_service.py  validation_service.py  views_service.py
backend/backend/utils/: export_helper.py  file_hash.py  file_validation.py
backend/tests/: 1_produtos_cadastro.csv  2_entradas_mp.csv  3_movimentacao_interna.csv  4_saidas_pa.csv  gera_planilha.py  gera_planilhaV2.py  produtos.csv
backend/tests/pcp_test/: demanda.py  entradas.py  estoque.py  main.py  movimentacoes_internas.py  produtos.py  saida.py
forecasting_module/: DEVELOPMENT.md  README.md  pyproject.toml
forecasting_module/notebooks/: demandPrediction.ipynb
forecasting_module/src/: main.py
forecasting_module/src/forecasting_module/: setup.py
forecasting_module/src/forecasting_module/api/: __init__.py  anomaly_router.py  router.py
forecasting_module/src/forecasting_module/core/: data_loader.py
forecasting_module/src/forecasting_module/db/: database.py  models.py
forecasting_module/src/forecasting_module/ml_artifacts/: ME-LEIA
forecasting_module/src/forecasting_module/schemas/: models.py
forecasting_module/src/forecasting_module/services/: anomaly_app_service.py  anomaly_service.py  batch_detector.py  model_loader.py  previsao_service.py
gateway_module/: pyproject.toml
gateway_module/src/gateway_module/: __init__.py  gateway.py  intent.py
llm_module/: DEVELOPMENT.md  README.md  README.txt  main.py  pyproject.toml  requirements.txt
llm_module/src/llm_module/audit/: logger.py
llm_module/src/llm_module/database/: base.py  checkpointer.py  repository.py  schemas.py
llm_module/src/llm_module/memory/: chat_message_histories.py  implementation.py
llm_module/src/llm_module/models/: chatbot.py  intent_classifier.py  title_generator.py
llm_module/src/llm_module/routers/: llm_router.py
llm_module/src/llm_module/services/: llm_service.py  llm_sessions.py  router_service.py
llm_module/src/llm_module/tools/: mcp_tools.py  middlewares.py  sql_tools.py  tool_retriever.py
llm_module/src/llm_module/utils/: config.py  postgres_client.py
llm_module/src/prompts/: chat_bot.md
llm_module/tests/: test.py  test_cases.json
llm_report/: DEVELOPMENT.md  README.md  README.txt  main.py  pyproject.toml
llm_report/src/llm_module/agents/: report_agent.py
llm_report/src/llm_module/builders/: analysis_builder.py  movement_builder.py
llm_report/src/llm_module/formatters/: base_formatter.py  curva_abc_formatter.py  entradas_saidas_formatter.py  estoque_baixo_formatter.py  formatter_factory.py  giro_estoque_formatter.py  movimentacao_periodo_formatter.py  produtos_sem_giro_formatter.py
llm_report/src/llm_module/models/: chatbot.py
llm_report/src/llm_module/reports/: report_intent.py  report_repository.py  report_service.py
llm_report/src/llm_module/routers/: llm_router.py
llm_report/src/llm_module/services/: llm_service.py  llm_sessions.py  report_orchestrator.py
llm_report/src/llm_module/tools/: llm_report_tool.py
llm_report/src/llm_module/utils/: llm_normalizer.py  postgres_client.py
llm_report/src/llm_report/agents/: report_agent.py
llm_report/src/llm_report/formatters/: base_formatter.py  curva_abc_formatter.py  entradas_saidas_formatter.py  estoque_baixo_formatter.py  giro_estoque_formatter.py  inventario_formatter.py  movimentacao_periodo_formatter.py  produtos_custo_formatter.py  produtos_sem_giro_formatter.py  saldo_estoque_formatter.py  validade_proxima_formatter.py
llm_report/src/llm_report/models/: chatbot.py
llm_report/src/llm_report/reports/: report_repository.py  report_service.py
llm_report/src/prompts/: chat_bot.md  report_prompts.py  summarization.md
llm_report/tests/: test.py  test_cases.json  test_orchestrator.py  test_report.py
request_module/: DEVELOPMENT.md  README.md  main.py  pyproject.toml
request_module/src/: request_router.py
request_module/src/models/: RequestModel.py
request_module/src/request_module/: __init__.py
request_module/src/templates/: mail_template.yaml
request_module/src/utils/: env_loader.py  mail_sender.py
(+246 files in other folders)
