[project]
name = "auth-module"
version = "1.0.0"
description = "Módulo de autenticação, segurança e gestão de utilizadores para o backend do Gestock."
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard]>=0.123.5",
    "psycopg[binary,pool]>=3.3.2",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
]

