[project]
name = "forecasting-module"
version = "1.0.0"
description = "Módulo de Machine Learning responsável pela previsão de demanda, análise de tendências e prevenção de rupturas de estoque no ecossistema Gestock."
readme = "README.md"
authors = [
    { name = "Thais Carolina Braga de Magalhães", email = "tcbdma.snf24@uea.edu.br" }
]
requires-python = ">=3.11"
dependencies = [
    "darts>=0.42.1",
    "fastapi==0.123.5",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
