[project]
name = "gateway-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thais Carolina Braga de Magalhães", email = "tcbdma.snf24@uea.edu.br" }
]
requires-python = ">=3.11"
dependencies = [
    "llm-module",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
llm-module = { path = "../llm_module", editable = true }
