[project]
name = "llm_report"
version = "1.0.0"
description = "Módulo gerador de relatórios do Gestock. Utiliza Inteligência Artificial (LLMs) aliada a chunking de dados para formatar e resumir grandes listagens do banco de dados com alta precisão."
authors = [
    {name = "Thais Carolina Braga de Magalhães",email = "tcbdma.snf24@uea.edu.br"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.1",
    "langchain>=0.2.3",
    "langchain-community>=0.2.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=0.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "psycopg[binary]>=3.3.2",
    "langgraph-checkpoint-postgres>=3.0.3",
]

[tool.poetry]
packages = [{include = "llm_report", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
