[project]
name = "request-module"
version = "1.0.0"
description = "Módulo do Gestock responsável pela gestão de requisições de compra e notificação automatizada por e-mail ao setor financeiro."
readme = "README.md"
authors = [
    { name = "Thais Carolina Braga de Magalhães", email = "tcbdma.snf24@uea.edu.br" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.123.5,<0.124.0)",
    "psycopg[binary,pool]>=3.3.3",
    "python-dotenv>=1.2.2",
    "auth-module",
]

[tool.uv.sources]
auth-module = { path = "../auth_module", editable = true }

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
